--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ngrx/store": "^13.1.0",
     "firebase": "^9.6.10",
     "hammerjs": "^2.0.8",
     "rxjs": "~7.5.0",
